Add GitHub repository link and update project information in HTML and LaTeX files

--- a/html/bird_guide.html
+++ b/html/bird_guide.html
@@ -217,6 +217,9 @@ All rights reserved.</p>
 </div>
 
 <h1 class="unnumbered" id="index">Index</h1>
+<footer>
+  <p>This project is available at <a href="https://github.com/yogeshw/sppu-bird-guide">GitHub Repository</a>. Please raise issues or submit pull requests for updates to this bird-guide.</p>
+</footer>
 <script src="script.js"></script>
 </body>
 </html>
