--- a/html/bird_guide_marathi.html
+++ b/html/bird_guide_marathi.html
@@ -205,6 +205,9 @@
     <p><strong>घरटे:</strong> झाडांमध्ये घरटे बांधते</p>
   </div>
 </div>
+<footer>
+  <p>हा प्रकल्प <a href="https://github.com/yogeshw/sppu-bird-guide">GitHub Repository</a> मध्ये उपलब्ध आहे. कृपया अद्यतनांसाठी इश्यू किंवा पुल विनंत्या उचलाव्यात.</p>
+</footer>
 <script src="script.js"></script>
 </body>
 </html>
